🐛 Fix some stuff on smaller screen sizes

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+header,
+section {
+    max-width: 100%;
+}
+
 /* Custom properties */
 
 :root {
@@ -47,8 +52,6 @@
 
 html {
     scroll-behavior: smooth;
-    max-width: 100%;
-    overflow-x: hidden;
 }
 
 body {
@@ -328,13 +331,19 @@ header {
                 0em 0em 0.25em rgba(0, 0, 0, 0);
     top: 0;
     bottom: 0;
-    left: max(50%, calc(100% - 800px));
     right: 0;
-    max-width: 800px;
+    left: 0;
     z-index: 100;
-
+    
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
+}
+
+@media (min-width: 700px) {
+    .nav {
+        left: max(50%, calc(100% - 800px));
+        max-width: 800px;
+    }
 }
 
 .nav__list {
@@ -375,7 +384,6 @@ header {
 .nav__link:hover::after {
     width: 100%;
 }
-
 /* End line hover */
 
 .nav-toggle {
@@ -384,7 +392,7 @@ header {
     border: 0;
     cursor: pointer;
     position: fixed;
-    right: 1em;
+    right: 2em;
     top: 0.5em;
     z-index: 1000;
 }
